Fix alignment of dealt card

--- a/apps/client/src/components/randomcarddisplay/randomCardDisplay.module.css
+++ b/apps/client/src/components/randomcarddisplay/randomCardDisplay.module.css
@@ -5,10 +5,12 @@
 }
 .card-deck-selection {
   width: 15rem;
+  cursor: pointer;
 }
 
 .card-container {
   display: flex;
+  position: inherit;
   justify-content: center;
   height: 600px;
 }
